Only show the BeanFlinger screensaver to the worthy.
(That is: you must have discovered the flying-jellybeans
easter egg to gain permanent access to the Dreams version of
same.)

Change-Id: I65ce39c0ab5b61f492a3637e3c31b3c91f4f0f89

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -397,4 +397,7 @@
 
     <!-- Description of the button in the phone-style notification panel that controls auto-rotation, when auto-rotation is off. [CHAR LIMIT=NONE] -->
     <string name="accessibility_rotation_lock_on_portrait">Screen is locked in portrait orientation.</string>
+
+    <!-- Name of the Jelly Bean platlogo screensaver -->
+    <string name="jelly_bean_dream_name">BeanFlinger</string>
 </resources>
